# charmed-kubeflow-uats

./: .codespell-ignore-words  .gitignore  README.md  concierge.yaml  pyproject.toml  requirements-fmt.txt  requirements-lint.txt  requirements.in  requirements.txt  sqa_tests  tox.ini
.github/workflows/: on_pull_or_push.yaml
assets/: admission-controller.yaml  gpu-toleration-poddefault.yaml.j2  kserve-inference-service.yaml.j2  pod-security-admission-configurations.yaml  runtimeclass.yaml.j2  test-job.yaml.j2  test.images.txt  versions-ambient.yaml  versions-sidecar.yaml  versions.yaml
assets/installs/: README.md  test-cm.yaml.j2
driver/: conftest.py  notebook_jobs.py  test_kubeflow_workloads.py  utils.py
driver/ambient/: README.md  conftest.py  test_ambient_integration.py
driver/m2m/: README.md  conftest.py  helpers.py  test_m2m_inference.py
driver/multi-tenancy/: README.md  conftest.py  s3.py  test_multi_tenancy_integration.py
driver/multi-tenancy/assets/: data_passing_pipeline.yaml
tests/: README.md  conftest.py  proxy-poddefault.yaml  proxy-poddefault.yaml.j2  run_notebook.py  security-policy-poddefault.yaml.j2  test_notebooks.py  utils.py
tests/notebooks/: kserve-integration.ipynb  proxy-poddefault.yaml  training-integration.ipynb
tests/notebooks/e2e-wine/: e2e-wine-kfp-mlflow-kserve.ipynb  e2e-wine-kfp-mlflow-seldon.ipynb  requirements.in  requirements.txt
tests/notebooks/katib/: katib-integration.ipynb  requirements.in  requirements.txt
tests/notebooks/kfp/: kfp-integration.ipynb  requirements.in  requirements.txt
tests/notebooks/kfp_v1/: kfp-v1-integration.ipynb  requirements.in  requirements.txt
tests/notebooks/kfp_v2/: kfp-v2-integration.ipynb  requirements.in  requirements.txt
tests/notebooks/kserve/: kserve-integration.ipynb  requirements.in  requirements.txt
tests/notebooks/kubeflow-trainer/: kubeflow-trainer-integration.ipynb  requirements.in  requirements.txt
tests/notebooks/minio/: minio-integration.ipynb  requirements.in  requirements.txt
(+68 files in other folders)
