# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py312"]

[tool.isort]
line_length = 99
profile = "black"

[tool.poetry]
name = "kubeflow-uat"
version = "1.0"
description = "kubeflow-uat"
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
juju = "<4.0"
lightkube = ">=0.15"
# pytest is transitive dependencies of other packages
# pytest = "^7.4"
pytest-operator = ">=0.31"
pytest-dependency = ">=0.6"
tenacity = ">=8.2"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = {extras=["jupyter"], version=">=23.9"}
isort = ">=5.12"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = {extras=["jupyter"], version=">=23.9"}
codespell = ">=2.2"
# Flake is transitive dependencies of other packages
# flake8 = ">=6.0"
flake8-builtins = ">=2.1"
flake8-copyright = ">=0.2"
isort = ">=5.12"
pep8-naming = ">=0.13"
pyproject-flake8 = ">=6.0.0"


# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
